--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -240,7 +240,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, ~/.config/rofi/launchers/type-2/launcher.sh || pkill rofi
@@ -311,9 +310,38 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Hassan's App Shortcuts 🚀
+bind = $mainMod, B, exec, zen-browser        # B for Browser
+bind = $mainMod, A, exec, audacious          # A for Audacious
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
+
+
+# ============================================================
+# Hassan's Workspace Rules 🏢
+# ============================================================
+
+# 1. Terminal always on Workspace 1
+windowrulev2 = workspace 1, class:^(kitty)$
+windowrulev2 = workspace 1, class:^(foot)$
+
+# 2. Zen Browser always on Workspace 2
+windowrulev2 = workspace 2, class:^(zen.*)$
+
+# 3. Launch Neovim in a special Kitty class on Workspace 3
+bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim
+windowrulev2 = workspace 3, class:^(kitty-nvim)$
+
+# 4. Thunar on Workspace 4
+windowrulev2 = workspace 4, class:^(thunar)$
+
+# 6. Audacious on Workspace 6
+windowrulev2 = workspace 6, initialClass:^(audacious)$
+windowrulev2 = workspace 6, initialClass:^(Audacious)$
+windowrulev2 = workspace 6, title:^(Audacious)$
+
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
