--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -284,9 +284,12 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e+1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# 1. Move windows with Super + LMB 🖱️
 bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+
+# 2. Resize windows with Super + Shift + LMB 📐
+# We use the 'Shift' modifier alongside the mainMod
+bindm = $mainMod SHIFT, mouse:272, resizewindow
 
 # The Windows-style Clipboard History shortcut 🚀
 bind = SUPER SHIFT, V, exec, cliphist list | rofi -dmenu -p "Show Clipboard History" -theme ~/.config/rofi/launchers/type-2/style-2.rasi  | cliphist decode | wl-copy
@@ -338,9 +341,14 @@ windowrulev2 = workspace 3, class:^(kitty-nvim)$
 windowrulev2 = workspace 4, class:^(thunar)$
 
 # 6. Audacious on Workspace 6
+windowrulev2 = workspace 6, class:^(audacious)$
 windowrulev2 = workspace 6, initialClass:^(audacious)$
 windowrulev2 = workspace 6, initialClass:^(Audacious)$
 windowrulev2 = workspace 6, title:^(Audacious)$
+
+# 🎯 Rule: Give Firefox some transparency, but MAKE IT SOLID if the title is YouTube
+windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
+windowrulev2 = opaque, title:(.*YouTube.*)
 
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
