--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -346,10 +346,16 @@ windowrulev2 = workspace 6, initialClass:^(audacious)$
 windowrulev2 = workspace 6, initialClass:^(Audacious)$
 windowrulev2 = workspace 6, title:^(Audacious)$
 
-# 🎯 Rule: Give Firefox some transparency, but MAKE IT SOLID if the title is YouTube
-windowrulev2 = opacity 0.85 0.85, class:^(firefox)$
+# Rule: Give Firefox some transparency, but MAKE IT SOLID if the title is YouTube
+windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
 windowrulev2 = opaque, title:(.*YouTube.*)
 
+# Rule: Give Audacious transparency
+windowrulev2 = opacity 0.70 0.70, class:^(audacious)$
+windowrulev2 = opacity 0.70 0.70, class:^(audacious)$
+windowrulev2 = opacity 0.70 0.70, initialClass:^(audacious)$
+windowrulev2 = opacity 0.70 0.70, initialClass:^(Audacious)$
+windowrulev2 = opacity 0.70 0.70, title:^(Audacious)$
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
