--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -314,7 +314,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Hassan's App Shortcuts 🚀
-bind = $mainMod, B, exec, zen-browser        # B for Browser
+bind = $mainMod, B, exec, firefox        # B for Browser
 bind = $mainMod, A, exec, audacious          # A for Audacious
 
 ##############################
@@ -331,7 +331,7 @@ windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 1, class:^(foot)$
 
 # 2. Zen Browser always on Workspace 2
-windowrulev2 = workspace 2, class:^(zen.*)$
+windowrulev2 = workspace 2, class:^(firefox)$
 
 # 3. Launch Neovim in a special Kitty class on Workspace 3
 bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim
