--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -314,8 +314,9 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Hassan's App Shortcuts 🚀
-bind = $mainMod, B, exec, firefox        # B for Browser
-bind = $mainMod, A, exec, audacious          # A for Audacious
+bind = $mainMod, B, exec, firefox                             # B for Browser
+bind = $mainMod, A, exec, audacious                           # A for Audacious
+bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim    # N for neovim
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -326,45 +327,98 @@ bind = $mainMod, A, exec, audacious          # A for Audacious
 # Hassan's Workspace Rules 🏢
 # ============================================================
 
-# 1. Terminal always on Workspace 1
-windowrulev2 = workspace 1, class:^(kitty)$
-windowrulev2 = workspace 1, class:^(foot)$
+# Terminal on Workspace 1
+windowrule {
+    name = kitty-workspace
+    workspace = 1
+    match:class = ^(kitty)$
+}
 
-# 2. Zen Browser always on Workspace 2
-windowrulev2 = workspace 2, class:^(firefox)$
+windowrule {
+    name = foot-workspace
+    workspace = 1
+    match:class = ^(foot)$
+}
 
-# 3. Launch Neovim in a special Kitty class on Workspace 3
-bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim
-windowrulev2 = workspace 3, class:^(kitty-nvim)$
+# Firefox on Workspace 2
+windowrule {
+    name = firefox-workspace
+    workspace = 2
+    match:class = ^(firefox)$
+}
 
-# 4. Thunar on Workspace 4
-windowrulev2 = workspace 4, class:^(thunar)$
+# Neovim on Workspace 3
+windowrule {
+    name = nvim-workspace
+    workspace = 3
+    match:class = ^(kitty-nvim)$
+}
 
-# 6. Audacious on Workspace 6
-windowrulev2 = workspace 6, class:^(audacious)$
-windowrulev2 = workspace 6, initialClass:^(audacious)$
-windowrulev2 = workspace 6, initialClass:^(Audacious)$
-windowrulev2 = workspace 6, title:^(Audacious)$
+# Thunar on Workspace 4
+windowrule {
+    name = thunar-workspace
+    workspace = 4
+    match:class = ^(thunar)$
+}
 
-# Rule: Give Firefox some transparency, but MAKE IT SOLID if the title is YouTube
-windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
-windowrulev2 = opaque, title:(.*YouTube.*)
+# Audacious on Workspace 6 (consolidated all audacious rules)
+windowrule {
+    name = audacious-workspace
+    workspace = 6
+    match:class = ^(Audacious)$
+}
+#
+# Firefox transparency (but solid on YouTube)
+windowrule {
+    name = firefox-opacity
+    opacity = 0.90 0.90
+    match:class = ^(firefox)$
+}
 
-# Rule: Give Audacious transparency
-windowrulev2 = opacity 0.70 0.70, class:^(audacious)$
-windowrulev2 = opacity 0.70 0.70, class:^(audacious)$
-windowrulev2 = opacity 0.70 0.70, initialClass:^(audacious)$
-windowrulev2 = opacity 0.70 0.70, initialClass:^(Audacious)$
-windowrulev2 = opacity 0.70 0.70, title:^(Audacious)$
+windowrule {
+    name = youtube-opaque
+    opaque = true
+    match:title = .*YouTube.*
+}
+
+# Audacious transparency (consolidated)
+windowrule {
+    name = audacious-opacity
+    opacity = 0.70 0.70
+    match:class = ^(Audacious)$
+}
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# Example windowrules that are useful
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+    suppress_event = maximize
+}
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+    name = move-hyprland-run
+
+    match:class = hyprland-run
+
+    move = 20 monitor_h-120
+    float = yes
+}
