--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -300,9 +300,9 @@ bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Hassan's App Shortcuts 🚀
-bind = $mainMod, B, exec, firefox                             # B for Browser
-bind = $mainMod, A, exec, audacious                           # A for Audacious
-bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim    # N for neovim
+bind = $mainMod, B, exec, firefox                                # B for Browser
+bind = $mainMod, A, exec, audacious                              # A for Audacious
+bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim ./    # N for neovim
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -345,6 +345,7 @@ windowrule {
     name = thunar-workspace
     workspace = 4
     match:class = ^(thunar)$
+    opacity = 0.75
 }
 
 # Audacious on Workspace 6 (consolidated all audacious rules)
@@ -353,7 +354,7 @@ windowrule {
     workspace = 6
     match:class = ^(Audacious)$
 }
-#
+
 # Firefox transparency (but solid on YouTube)
 windowrule {
     name = firefox-opacity
@@ -370,7 +371,7 @@ windowrule {
 # Audacious transparency (consolidated)
 windowrule {
     name = audacious-opacity
-    opacity = 0.70 0.70
+    opacity = 0.60 0.60
     match:class = ^(Audacious)$
 }
 
