--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -53,8 +53,6 @@ exec = hyprshade on vibrance
 exec-once = cliphist wipe
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
-exec-once = playerctld daemon
-# exec-once = wl-clip-persist --clipboard regular
 
 
 #############################
@@ -63,8 +61,8 @@ exec-once = playerctld daemon
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,22
-env = HYPRCURSOR_SIZE,22
+env = XCURSOR_SIZE,18
+env = HYPRCURSOR_SIZE,18
 
 
 ###################
@@ -129,10 +127,10 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 4
+        size = 5
+        passes = 3
 
-        vibrancy = 0.7
+        vibrancy = 0.8
     }
 }
 
@@ -150,7 +148,7 @@ animations {
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     4,    default
+    animation = global,        1,     5,    default
     animation = border,        1,     5.39,  easeOutQuint
     animation = windows,       1,     4.79,  easeOutQuint
     animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
@@ -287,11 +285,11 @@ bind = $mainMod, mouse_up, workspace, e+1
 # 1. Move windows with Super + LMB 🖱️
 bindm = $mainMod, mouse:272, movewindow
 
-# 2. Resize windows with Super + Shift + LMB 📐
+# 2. Resize windows with Super + Shift + LMB
 # We use the 'Shift' modifier alongside the mainMod
 bindm = $mainMod SHIFT, mouse:272, resizewindow
 
-# The Windows-style Clipboard History shortcut 🚀
+# The Windows-style Clipboard History shortcut
 bind = SUPER SHIFT, V, exec, cliphist list | rofi -dmenu -p "Show Clipboard History" -theme ~/.config/rofi/launchers/type-2/style-2.rasi  | cliphist decode | wl-copy
 
 # Screenshot keybinds (Hyprshot) ─ no terminal needed
@@ -299,7 +297,7 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
-# Hassan's App Shortcuts 🚀
+# Hassan's App Shortcuts
 bind = $mainMod, B, exec, firefox                                # B for Browser
 bind = $mainMod, A, exec, audacious                              # A for Audacious
 bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim ./    # N for neovim
@@ -351,6 +349,7 @@ windowrule {
 # Audacious on Workspace 6 (consolidated all audacious rules)
 windowrule {
     name = audacious-workspace
+    opacity = 0.75 0.75
     workspace = 6
     match:class = ^(Audacious)$
 }
@@ -366,13 +365,6 @@ windowrule {
     name = youtube-opaque
     opaque = true
     match:title = .*YouTube.*
-}
-
-# Audacious transparency (consolidated)
-windowrule {
-    name = audacious-opacity
-    opacity = 0.60 0.60
-    match:class = ^(Audacious)$
 }
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
