--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -233,7 +233,7 @@ device {
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = ALT # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
@@ -300,7 +300,7 @@ bind = $shiftMod, PRINT, exec, hyprshot -m region
 # Hassan's App Shortcuts
 bind = $mainMod, B, exec, firefox                                # B for Browser
 bind = $mainMod, A, exec, audacious                              # A for Audacious
-bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim ./    # N for neovim
+bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim       # N for neovim
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
