--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -290,7 +290,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod SHIFT, mouse:272, resizewindow
 
 # The Windows-style Clipboard History shortcut
-bind = SUPER SHIFT, V, exec, cliphist list | rofi -dmenu -p "Show Clipboard History" -theme ~/.config/rofi/launchers/type-2/style-2.rasi  | cliphist decode | wl-copy
+bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -p "Show Clipboard History" -theme ~/.config/rofi/launchers/type-2/style-2.rasi  | cliphist decode | wl-copy
 
 # Screenshot keybinds (Hyprshot) ─ no terminal needed
 bind = $mainMod, PRINT, exec, hyprshot -m window
@@ -310,19 +310,6 @@ bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim       # N for neovim
 # ============================================================
 # Hassan's Workspace Rules 🏢
 # ============================================================
-
-# Terminal on Workspace 1
-windowrule {
-    name = kitty-workspace
-    workspace = 1
-    match:class = ^(kitty)$
-}
-
-windowrule {
-    name = foot-workspace
-    workspace = 1
-    match:class = ^(foot)$
-}
 
 # Firefox on Workspace 2
 windowrule {
