--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -237,12 +237,13 @@ $mainMod = ALT # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, C, killactive
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, togglefloating
 bind = $mainMod, R, exec, ~/.config/rofi/launchers/type-2/launcher.sh || pkill rofi
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo # dwindle
+bind = $mainMod, J, togglesplit # dwindle
+bind = $mainMod SHIFT, f, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod SHIFT, h, movefocus, l
