--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -301,7 +301,7 @@ bind = $shiftMod, PRINT, exec, hyprshot -m region
 # Hassan's App Shortcuts
 bind = $mainMod, B, exec, firefox                                # B for Browser
 bind = $mainMod, A, exec, audacious                              # A for Audacious
-bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim       # N for neovim
+bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim $HOME/Programming/      # N for neovim
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
