--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -294,9 +294,9 @@ bindm = $mainMod SHIFT, mouse:272, resizewindow
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -p "Show Clipboard History" -theme ~/.config/rofi/launchers/type-2/style-2.rasi  | cliphist decode | wl-copy
 
 # Screenshot keybinds (Hyprshot) ─ no terminal needed
-bind = $mainMod, PRINT, exec, hyprshot -m window
-bind = , PRINT, exec, hyprshot -m output
-bind = $shiftMod, PRINT, exec, hyprshot -m region
+bind = $mainMod, PRINT, exec, hyprshot -m window -o $HOME/Pictures/Screenshots/
+bind = , PRINT, exec, hyprshot -m output -o $HOME/Pictures/Screenshots/
+bind = $shiftMod, PRINT, exec, hyprshot -m region -o $HOME/Pictures/Screenshots/
 
 # Hassan's App Shortcuts
 bind = $mainMod, B, exec, firefox                                # B for Browser
