--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -302,6 +302,7 @@ bind = $shiftMod, PRINT, exec, hyprshot -m region -o $HOME/Pictures/Screenshots/
 bind = $mainMod, B, exec, firefox                                # B for Browser
 bind = $mainMod, A, exec, audacious                              # A for Audacious
 bind = $mainMod, N, exec, kitty --class kitty-nvim -e nvim $HOME/Programming/      # N for neovim
+bind = $mainMod, O, exec, okular                                 # O for Ocular
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -332,6 +333,13 @@ windowrule {
     workspace = 4
     match:class = ^(thunar)$
     opacity = 0.75
+}
+
+# Okular on Workspace 5
+windowrule {
+    name = okular-workspace
+    workspace = 5
+    match:class = ^(okular)$
 }
 
 # Audacious on Workspace 6 (consolidated all audacious rules)
