--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -339,7 +339,8 @@ windowrule {
 windowrule {
     name = okular-workspace
     workspace = 5
-    match:class = ^(okular)$
+    match:class = ^(org.kde.okular)$
+    opacity = 0.80
 }
 
 # Audacious on Workspace 6 (consolidated all audacious rules)
