--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -242,7 +242,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating
 bind = $mainMod, R, exec, ~/.config/rofi/launchers/type-2/launcher.sh || pkill rofi
 bind = $mainMod, P, pseudo # dwindle
-bind = $mainMod, J, togglesplit # dwindle
+bind = $mainMod SHIFT, J, togglesplit # dwindle
 bind = $mainMod SHIFT, f, fullscreen
 
 # Move focus with mainMod + arrow keys
