--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -283,6 +283,9 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e+1
 
+# Launch Floating Terminal
+bind = $mainMod SHIFT, Q, exec, $terminal --class floating-term
+
 # 1. Move windows with Super + LMB 🖱️
 bindm = $mainMod, mouse:272, movewindow
 
@@ -312,6 +315,13 @@ bind = $mainMod, O, exec, okular                                 # O for Ocular
 # ============================================================
 # Hassan's Workspace Rules 🏢
 # ============================================================
+
+windowrule {
+    name = floating-terminal
+    float = true
+    match:class = ^(floating-term)$
+    size = 750 400
+}
 
 # Firefox on Workspace 2
 windowrule {
